- Fix bug that prevented deleting invoices
- Fix a bug that would temporarily grant access to a membership when user cancels payment
- Fix a bug that created duplicate email templates every time an email was sent
- Fix a bug in the reset-script that would delete too much data in multisite installs (see Help > Advanced Settings)
- Fix a PHP warning on Membership 2 pages about "invalid argument in foreach"

1.0.1.0
----------------------------------------------------------------------
- Add gateway: 2Checkout
- Add new Add-on for WPML integration
- Add new Add-on to enable Pro-Rating when switching memberships
- Add new Add-on to allow Search Engines to index protected content
- Add new Add-on to customize the Registration Form and User Profile Fields
- Add new Add-on that allows creation of custom Membership Attributes
- Add a new Add/Edit Member page where subscription details can be modified
- Add an admin notice when no payment gateway is active but paid memberships exist
- Add bulk actions to the Members admin page
- Add a dedicated Edit Membership page with improved layout
- Add an edit page to change the Membership Type at any time
- Add an edit page to override Automated Email Responses for each Membership
- Add an edit page to override Protection Messages for each Membership
- Add a new settings page to define Upgrade Paths to each Membership
- Add a warning when using a wrong value in the PayPal Standard settings
- Add a few new API functions (see the API Docs link in the Help page)
- Add new functions to Payment Logs to manually handle invalid payments
- Add new template tag function `ms_has_membership()`
- Add template support so themes can define custom Membership pages (m2-account.php, m2-memberships.php, m2-protected-content.php, m2-register.php, m2-registration-complete.php, m2-invoice.php)
- Improve payment logs to display additional/better information for errors
- Improve the layout of the coupon fields in the payment confirmation form